fix(flyway-367): the guard did not guard — 21 review patches
Four files carrying real INSERTs, none in the manifest, planted in db/ at once:
4 tests, 0 failures. That was the state of the check this ticket exists for.

  1. A `--` comment containing a block-comment opener paired with a closer three
     lines down and swallowed the DML between them. Blocks were stripped before
     lines, so the pass never knew the opener was already inside a comment. A
     FALSE GREEN, which is the direction D3 was supposed to protect. Now one
     left-to-right alternation: whichever comment opens first wins.
  2. V35_1__seed.sql is Flyway version 35.1 — `_` is a version separator — but
     it matched NEITHER pattern, so no check read it at all. The sibling
     uniqueness test shared the hole, which made V1.1__a + V1_1__b an undetected
     version collision: the guard had cemented a hole in the exact thing it
     exists to protect. Both classes now accept [._] and normalise on compare.
  3. Files.list reads one level. Flyway's location scan is recursive, so
     db/sub/V96__seed.sql was applied at IT boot and invisible to everything.
     Files.walk in both classes.
  4. INSERT FIRST — the third member of the family whose other two were added
     defensively — was unmatched, and band 81-89 is legal in no documented band.

Re-run after patching: all four named in one failure. A fifth check now fails
any .sql matching neither shape, so the next spelling variant cannot hide in the
gap between the two patterns.

And the change red-lined its own merge gate. Check 4 read ../scripts, outside
the module; backend/Dockerfile copies only pom.xml/.mvn/src and runs mvn package
with unit tests on, so scripts/ cannot exist there. Three review layers
reproduced BUILD FAILURE independently. It now self-skips when the script is
absent — verified BUILD SUCCESS / 1 skipped in a sandbox mirroring the
Dockerfile — and the skip is in the docstring and the README rather than left to
be discovered.
